FIX: wrong z index, resulting in channel list item overlapping the pop up window

--- a/client/src/pages/sideBar.css
+++ b/client/src/pages/sideBar.css
@@ -12,6 +12,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	z-index: 0;
   }
   
   .search-bar-container {
@@ -41,6 +42,7 @@
 	padding: 0;
 	list-style: none;
 	height: 100%;
+	z-index: 1;
   }
   
   .alignItemsListContainer::-webkit-scrollbar {
